--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,7 +40,7 @@
                         </li>
                     {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="{{ path('app_cart') }}">
                             Shopping Cart (<span id="js-shopping-cart-items">{{ count_cart_items() }}</span>)
                         </a>
                     </li>
