--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,7 +41,7 @@
                     {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="#">
-                            Shopping Cart (<span>{{ count_cart_items() }}</span>)
+                            Shopping Cart (<span id="js-shopping-cart-items">{{ count_cart_items() }}</span>)
                         </a>
                     </li>
                 </ul>
